al menos ya no falla en ese coso

--- a/Project_students/P5_students.ipynb
+++ b/Project_students/P5_students.ipynb
@@ -1511,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 171,
       "metadata": {
         "id": "QMOpImtiC_zU"
       },
@@ -1522,8 +1522,8 @@
         "    # Initialitize centroids based on a random selection of #n_clusters samples of X \n",
         "    rng = np.random.RandomState(seed)\n",
         "    i = rng.permutation(X.shape[0])[:n_clusters] \n",
-        "    print(X[i])\n",
         "    centroids = X[i]\n",
+        "    print(centroids)\n",
         "    \n",
         "    #Repeat the process during num_iterations or convergence achieved\n",
         "    for num in range(0,num_iterations):\n",
@@ -1598,6 +1598,42 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 160,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0 2 1]\n",
+            "[[-0.66922318  0.75745883 -0.6516063 ]\n",
+            " [-0.27393573 -0.62226623 -0.03712826]\n",
+            " [-0.69072393 -0.19758761  0.75764815]]\n",
+            "[[ 0.75745883 -0.6516063 ]\n",
+            " [-0.62226623 -0.03712826]\n",
+            " [-0.19758761  0.75764815]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# import numpy as np\n",
+        "# import numpy.linalg as linalg\n",
+        "\n",
+        "# A = np.random.random((3,3))\n",
+        "# eigenValues, eigenVectors = linalg.eig(A)\n",
+        "\n",
+        "# idx = eigenValues.argsort()[::-1]   \n",
+        "# eigenValues = eigenValues[idx]\n",
+        "# eigenVectors = eigenVectors[:,idx]\n",
+        "\n",
+        "# print(idx)\n",
+        "# idx = [1, 2]\n",
+        "# print(eigenVectors)\n",
+        "# print(eigenVectors[:, idx])"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
@@ -1609,27 +1645,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 180,
       "metadata": {},
       "outputs": [
         {
-          "ename": "KeyError",
-          "evalue": "\"None of [Index([357, 139], dtype='int32')] are in the [columns]\"",
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[3708. 2569.  173.]\n",
+            " [2333. 1451.  102.]]\n"
+          ]
+        },
+        {
+          "ename": "ValueError",
+          "evalue": "could not broadcast input array from shape (3,) into shape (1,)",
           "output_type": "error",
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[149], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m K_means_clustering(training_dt, \u001b[39m2\u001b[39;49m, \u001b[39m5\u001b[39;49m)\n",
-            "Cell \u001b[1;32mIn[148], line 6\u001b[0m, in \u001b[0;36mK_means_clustering\u001b[1;34m(X, n_clusters, seed, num_iterations)\u001b[0m\n\u001b[0;32m      4\u001b[0m rng \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mRandomState(seed)\n\u001b[0;32m      5\u001b[0m i \u001b[39m=\u001b[39m rng\u001b[39m.\u001b[39mpermutation(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])[:n_clusters] \n\u001b[1;32m----> 6\u001b[0m \u001b[39mprint\u001b[39m(X[i])\n\u001b[0;32m      7\u001b[0m centroids \u001b[39m=\u001b[39m X[i]\n\u001b[0;32m      9\u001b[0m \u001b[39m#Repeat the process during num_iterations or convergence achieved\u001b[39;00m\n",
-            "File \u001b[1;32mc:\\Users\\kirag\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:3767\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3765\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   3766\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[1;32m-> 3767\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[0;32m   3769\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   3770\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
-            "File \u001b[1;32mc:\\Users\\kirag\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:5876\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   5873\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   5874\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 5876\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   5878\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[0;32m   5879\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[0;32m   5880\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-            "File \u001b[1;32mc:\\Users\\kirag\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:5935\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   5933\u001b[0m     \u001b[39mif\u001b[39;00m use_interval_msg:\n\u001b[0;32m   5934\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[1;32m-> 5935\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   5937\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[0;32m   5938\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
-            "\u001b[1;31mKeyError\u001b[0m: \"None of [Index([357, 139], dtype='int32')] are in the [columns]\""
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[180], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m K_means_clustering(np\u001b[39m.\u001b[39;49mmatrix(training_dt), \u001b[39m2\u001b[39;49m, \u001b[39m5\u001b[39;49m)\n",
+            "Cell \u001b[1;32mIn[171], line 21\u001b[0m, in \u001b[0;36mK_means_clustering\u001b[1;34m(X, n_clusters, seed, num_iterations)\u001b[0m\n\u001b[0;32m     19\u001b[0m centroid_idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n\u001b[0;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m index \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_clusters):\n\u001b[1;32m---> 21\u001b[0m     distances \u001b[39m=\u001b[39m calculate_distance(X, centroids[index])\n\u001b[0;32m     22\u001b[0m     sq_dist \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n\u001b[0;32m     23\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n",
+            "Cell \u001b[1;32mIn[138], line 21\u001b[0m, in \u001b[0;36mcalculate_distance\u001b[1;34m(X, centroid)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39m##################\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[39m# Add your code  #\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[39m#      HERE      #\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39m#     for j in range(centroid.shape[0]):\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39m#         squareDistance[i,j] = np.square(X[i, j] - centroid[j])\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[1;32m---> 21\u001b[0m     squareDistance[i,:] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msquare(X[i,:] \u001b[39m-\u001b[39m centroid)\n\u001b[0;32m     23\u001b[0m \u001b[39mreturn\u001b[39;00m squareDistance\n",
+            "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (3,) into shape (1,)"
           ]
         }
       ],
       "source": [
-        "K_means_clustering(training_dt, 2, 5)"
+        "K_means_clustering(np.matrix(training_dt), 2, 5)"
       ]
     },
     {
