ya no peta poger

--- a/Project_students/P5_students.ipynb
+++ b/Project_students/P5_students.ipynb
@@ -1511,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 190,
       "metadata": {
         "id": "QMOpImtiC_zU"
       },
@@ -1537,7 +1537,7 @@
         "        min_dists = np.array([np.inf]*X.shape[0])\n",
         "        centroid_idx = np.zeros(X.shape[0])\n",
         "        for index in range(n_clusters):\n",
-        "            distances = calculate_distance(X, centroids[index])\n",
+        "            distances = calculate_distance(X, np.asarray(centroids[index]).reshape(-1))\n",
         "            sq_dist = np.zeros(X.shape[0])\n",
         "            for j in range(X.shape[0]):\n",
         "                sq_dist[j] = np.sum(distances[j])\n",
@@ -1554,12 +1554,13 @@
         "        # Add your code  #\n",
         "        #      HERE      #\n",
         "        ##################\n",
-        "        new_centroids = np.zeros(n_clusters, X.shape[1])\n",
+        "        new_centroids = np.zeros([n_clusters, X.shape[1]])\n",
+        "        print(new_centroids)\n",
         "        for index in range(n_clusters):\n",
         "            points = 0\n",
         "            for j in range(centroid_idx.shape[0]):\n",
         "                if (centroid_idx[j] == index):\n",
-        "                    new_centroids[index] += X[j, :]\n",
+        "                    new_centroids[index] += np.asarray(X[j, :]).reshape(-1)\n",
         "                    points += 1\n",
         "\n",
         "            new_centroids[index] /= points\n",
@@ -1645,33 +1646,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 180,
+      "execution_count": 191,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[3708. 2569.  173.]\n",
-            " [2333. 1451.  102.]]\n"
+            "[[3069.    0.   71.]\n",
+            " [6216.    0.  133.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "[[0. 0. 0.]\n",
+            " [0. 0. 0.]]\n",
+            "Convergence achieved with: 8 iterations\n"
           ]
         },
         {
-          "ename": "ValueError",
-          "evalue": "could not broadcast input array from shape (3,) into shape (1,)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[180], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m K_means_clustering(np\u001b[39m.\u001b[39;49mmatrix(training_dt), \u001b[39m2\u001b[39;49m, \u001b[39m5\u001b[39;49m)\n",
-            "Cell \u001b[1;32mIn[171], line 21\u001b[0m, in \u001b[0;36mK_means_clustering\u001b[1;34m(X, n_clusters, seed, num_iterations)\u001b[0m\n\u001b[0;32m     19\u001b[0m centroid_idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n\u001b[0;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m index \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_clusters):\n\u001b[1;32m---> 21\u001b[0m     distances \u001b[39m=\u001b[39m calculate_distance(X, centroids[index])\n\u001b[0;32m     22\u001b[0m     sq_dist \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n\u001b[0;32m     23\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n",
-            "Cell \u001b[1;32mIn[138], line 21\u001b[0m, in \u001b[0;36mcalculate_distance\u001b[1;34m(X, centroid)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39m##################\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[39m# Add your code  #\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[39m#      HERE      #\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39m#     for j in range(centroid.shape[0]):\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[39m#         squareDistance[i,j] = np.square(X[i, j] - centroid[j])\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[1;32m---> 21\u001b[0m     squareDistance[i,:] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msquare(X[i,:] \u001b[39m-\u001b[39m centroid)\n\u001b[0;32m     23\u001b[0m \u001b[39mreturn\u001b[39;00m squareDistance\n",
-            "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (3,) into shape (1,)"
-          ]
+          "data": {
+            "text/plain": [
+              "(array([[ 4399.93171806,  1637.76414094,   137.42290749],\n",
+              "        [22202.38461538,   591.53846154,   272.42307692]]),\n",
+              " 0)"
+            ]
+          },
+          "execution_count": 191,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "K_means_clustering(np.matrix(training_dt), 2, 5)"
+        "K_means_clustering(np.matrix(training_dt))"
       ]
     },
     {
