--- a/Project_students/P5_students.ipynb
+++ b/Project_students/P5_students.ipynb
@@ -1564,6 +1564,7 @@
         "                    points += 1\n",
         "\n",
         "            new_centroids[index] /= points\n",
+        "            print(new_centroids)\n",
         "        \n",
         "        # Evaluate convergence: if new_centroids=centroids, stop iterations\n",
         "        if np.all(centroids == new_centroids):\n",
