ex19 pero faltan alguinos de antes

--- a/Project_students/P5_students.ipynb
+++ b/Project_students/P5_students.ipynb
@@ -1216,7 +1216,7 @@
         "id": "AFdoMlT4dGMi"
       },
       "source": [
-        "[**EX11**] Rotate the plot 2 times to visualize the plot from other perspectives. "
+        "### [**EX11**] Rotate the plot 2 times to visualize the plot from other perspectives. "
       ]
     },
     {
@@ -1272,7 +1272,7 @@
         "id": "7DBB-a4sK6rm"
       },
       "source": [
-        "**[EX12]** Let's analysis the distribution of some categorical variables as: `gender`, `Marital Status`, `Education`, `Self-Employment` and `Loan_Status`\n",
+        "### **[EX12]** Let's analysis the distribution of some categorical variables as: `gender`, `Marital Status`, `Education`, `Self-Employment` and `Loan_Status`\n",
         ". Create a bar plot for these 4 variables."
       ]
     },
@@ -1463,7 +1463,7 @@
         "id": "1-1zZr5_C_zR"
       },
       "source": [
-        "[**EX13**] Build a `calculate_distance` function to calculate the distance between each point and the centroid"
+        "### [**EX13**] Build a `calculate_distance` function to calculate the distance between each point and the centroid"
       ]
     },
     {
@@ -1506,7 +1506,7 @@
         "id": "Qi1JkKiPC_zU"
       },
       "source": [
-        "[**EX14**] Build `K_means_clustering` function that creates a clustering according to K-means methodology."
+        "### [**EX14**] Build `K_means_clustering` function that creates a clustering according to K-means methodology."
       ]
     },
     {
@@ -1642,7 +1642,7 @@
         "id": "rIsXrFy6C_zb"
       },
       "source": [
-        "[**EX15**]Execute your `K_means_clustering` function to `training_dt` and number of clusters=3. Calculate the centroids of each cluster."
+        "### [**EX15**]Execute your `K_means_clustering` function to `training_dt` and number of clusters=3. Calculate the centroids of each cluster."
       ]
     },
     {
@@ -1717,7 +1717,7 @@
         "id": "k8jWJPNmC_ze"
       },
       "source": [
-        " [**EX16**] Plot the following scatter plots representing the centroids:\n",
+        " ### [**EX16**] Plot the following scatter plots representing the centroids:\n",
         " - Between `ApplicantIncome` vs `CoapplicantIncome`\n",
         " - Between `ApplicantIncome`vs `LoanAmount` and\n",
         " - Between `CoapplicantIncome`vs `LoanAmount`\n"
@@ -1877,7 +1877,8 @@
         "id": "k_rhWzA4JCtz"
       },
       "source": [
-        "**[EX17]** According to these scatter plots, would you change the value of K? Which one and why?"
+        "### **[EX17]** According to these scatter plots, would you change the value of K? Which one and why?\n",
+        "\n"
       ]
     },
     {
@@ -1887,7 +1888,7 @@
         "id": "zVF3eNuhC_zi"
       },
       "source": [
-        "[**EX18**] Execute the Sklearn library's KMeans function and compare both `Data_usage`vs `Voice_usage`scatter plots. Are they similar?\n",
+        "### [**EX18**] Execute the Sklearn library's KMeans function and compare both `Data_usage`vs `Voice_usage`scatter plots. Are they similar?\n",
         "\n",
         "Tip: We recommend the following  [KMeans()](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) parameters: `init`='random', `n_init`=10, `tol`=1e-04 and `random_state`=0"
       ]
@@ -1929,7 +1930,7 @@
         "id": "z65jtHdFC_zt"
       },
       "source": [
-        "**[EX 19]** Let's calculate the Elbow method for the previous dataset, i.e. containing only `ApplicantIncome`, `CoapplicantIncome` and `LoanAmount` variables for K values from 1 to 10.\n",
+        "### **[EX 19]** Let's calculate the Elbow method for the previous dataset, i.e. containing only `ApplicantIncome`, `CoapplicantIncome` and `LoanAmount` variables for K values from 1 to 10.\n",
         "We use [km.inertia_](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) from the Sklearn library's KMeans to measure the sum of squared distances of samples to their closest cluster center. Which is the optimal value for K?"
       ]
     },
@@ -1993,7 +1994,7 @@
         "id": "kotDCWoaC_z2"
       },
       "source": [
-        "[**EX20**]Calculate the `silhouette_score`value for a range of KMeans clusters from 2 to 7. The dataset to use is `training_dt`with the following variables: `ApplicantIncome`, `CoapplicantIncome` and `LoanAmount`. Which is the value of **K** with better **Silhouette**? Does it make sense taking into consideration the previous scatter plots?\n",
+        "### [**EX20**]Calculate the `silhouette_score`value for a range of KMeans clusters from 2 to 7. The dataset to use is `training_dt`with the following variables: `ApplicantIncome`, `CoapplicantIncome` and `LoanAmount`. Which is the value of **K** with better **Silhouette**? Does it make sense taking into consideration the previous scatter plots?\n",
         "\n",
         "Tip: use [silhouette_score](https://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_silhouette_analysis.html) to calculate the silhouette score and further information."
       ]
@@ -2227,7 +2228,7 @@
         "id": "QU5nmjfyC_z9"
       },
       "source": [
-        "[**EX21**]Repeat the K-Means clustering with **K=2** for the `training_dt`formed by `ApplicantIncome`, `CoapplicantIncome` and `LoanAmount`. For each cluster, calculate the **mean**, **standard deviation**, **min**, **max** for each variable.\n"
+        "### [**EX21**]Repeat the K-Means clustering with **K=2** for the `training_dt`formed by `ApplicantIncome`, `CoapplicantIncome` and `LoanAmount`. For each cluster, calculate the **mean**, **standard deviation**, **min**, **max** for each variable.\n"
       ]
     },
     {
@@ -2318,7 +2319,7 @@
         "id": "x_2iKOgklanL"
       },
       "source": [
-        "**[EX22]** Describe with one sentence the main characteristic of every customer segment in terms of this 3 variables?\n"
+        "### **[EX22]** Describe with one sentence the main characteristic of every customer segment in terms of this 3 variables?\n"
       ]
     },
     {
@@ -2371,7 +2372,7 @@
         "id": "CUiaYTTJC_0B"
       },
       "source": [
-        "[**EX23**] Execute the Mixture of Gaussians function (with number of components=3) to `training_dt` dataset with `Voice_usage`, `Data_usage`and `Monthly_expense` variables. \n",
+        "### [**EX23**] Execute the Mixture of Gaussians function (with number of components=3) to `training_dt` dataset with `Voice_usage`, `Data_usage`and `Monthly_expense` variables. \n",
         "- Which is the size of each cluster? \n",
         "- Visualize the scatter plot between `Data_usage` vs `Voice_usage`. Is it similar to the resulting from K-Means and K=3?\n",
         "- Visualize the scatter plot between `Data_usage` vs `Monthly_expense`. Is it similar to the resulting from K-Means and K=3?\n",
@@ -2387,7 +2388,7 @@
         "id": "FOzxAeJvC_0I"
       },
       "source": [
-        "[**EX24**] Evaluate the **Silhouette** metric for MoG with **number of components** from 2 to 7. "
+        "### [**EX24**] Evaluate the **Silhouette** metric for MoG with **number of components** from 2 to 7. "
       ]
     },
     {
@@ -2397,7 +2398,7 @@
         "id": "Ahhg8fFLm-zj"
       },
       "source": [
-        "**[EX25]** Which is the number of cluster with the highest score? Which method is finally the best for our dataset?\n",
+        "### **[EX25]** Which is the number of cluster with the highest score? Which method is finally the best for our dataset?\n",
         "\n"
       ]
     },
@@ -2428,7 +2429,7 @@
         "id": "MC4q_x37SMAy"
       },
       "source": [
-        "**[EX26]** Convert categorical columns to numerical using one-hot encoding and drop `Loan_ID`column. You should obtain something similar to:\n"
+        "### **[EX26]** Convert categorical columns to numerical using one-hot encoding and drop `Loan_ID`column. You should obtain something similar to:\n"
       ]
     },
     {
@@ -2984,7 +2985,7 @@
         "id": "kA0W19uITHYU"
       },
       "source": [
-        "**[EX27]** Split the data into: a) into features (X) and target(i.e. `Loan_Status`) (y) and b) training (80% of total dataset) and test sets (20% of total dataset)"
+        "### **[EX27]** Split the data into: a) into features (X) and target(i.e. `Loan_Status`) (y) and b) training (80% of total dataset) and test sets (20% of total dataset)"
       ]
     },
     {
@@ -3004,7 +3005,7 @@
         "id": "_xeX8v30jbJd"
       },
       "source": [
-        "[**EX28**] Train the Decision Tree algorithm from Sklearn library. Evaluate the following metrics:\n",
+        "### [**EX28**] Train the Decision Tree algorithm from Sklearn library. Evaluate the following metrics:\n",
         "- Which is **precision**, **recall** and **accuracy** of the algorithm?\n",
         "- Which is the **confusion matrix**?\n",
         "- Visualize the Decision Tree using tree.export_graphviz.\n",
@@ -3018,7 +3019,7 @@
         "id": "M47TVmu9jwYE"
       },
       "source": [
-        "[**EX29**] Train the Logistic Regression algorithm from Sklearn library. Evaluate the following metrics:\n",
+        "### [**EX29**] Train the Logistic Regression algorithm from Sklearn library. Evaluate the following metrics:\n",
         "- Which is **precision**, **recall** and **accuracy** of the algorithm?\n",
         "- Which is the **confusion matrix**?\n",
         "- Is Logistic Regression algorithm working better than DT? Why?"
@@ -3031,7 +3032,7 @@
         "id": "Le707BCwj-Or"
       },
       "source": [
-        "[**EX30**] Scale the numerical columns using StandardScaler function. Train again the Logistic Regression algorithm from Sklearn library. Evaluate the following metrics:\n",
+        "### [**EX30**] Scale the numerical columns using StandardScaler function. Train again the Logistic Regression algorithm from Sklearn library. Evaluate the following metrics:\n",
         "- Which is **precision**, **recall** and **accuracy** of the algorithm?\n",
         "- Which is the **confusion matrix**?\n",
         "- Is Logistic Regression algorithm working better than the previous LR? Why?"
@@ -3081,7 +3082,7 @@
         "id": "ib0-NX9eXM0F"
       },
       "source": [
-        "[**EX31**] Train a Decision Tree and Logistic Regression algorithms using a KFold cross-validation with **k=5** and calculate the **mean** and **standard deviation** of the **accuracy**. Plot a boxplot of the accuracy for every model. Which is the model with better mean value of the accuracy? Which is the algorithm with less deviation on the accuracy?  \n",
+        "### [**EX31**] Train a Decision Tree and Logistic Regression algorithms using a KFold cross-validation with **k=5** and calculate the **mean** and **standard deviation** of the **accuracy**. Plot a boxplot of the accuracy for every model. Which is the model with better mean value of the accuracy? Which is the algorithm with less deviation on the accuracy?  \n",
         "\n",
         "Tip 1: You may use [KFold](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.KFold.html) to apply cross-validation.\n",
         "\n",
@@ -3164,7 +3165,7 @@
         "id": "AdS_u6F3kQK3"
       },
       "source": [
-        "[**EX32**] Build a **voting** ensemble formed by a Logistic Regression and Decision Tree. Calculate the **precision**, **recall** and **confusion matrix** of the new classifier. Is it better than any of the previous baseline models? Justify your answer.\n",
+        "### [**EX32**] Build a **voting** ensemble formed by a Logistic Regression and Decision Tree. Calculate the **precision**, **recall** and **confusion matrix** of the new classifier. Is it better than any of the previous baseline models? Justify your answer.\n",
         "\n",
         "Tip: You may use [VotingClassifier()](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.VotingClassifier.html) to build this type of ensemble."
       ]
@@ -3216,7 +3217,7 @@
         "id": "RlN1WagplOj9"
       },
       "source": [
-        "[**EX33**] Build a **Bagging** ensemble based on Random Forest. Random Forest is considered a bagging ensemble formed by Decision Trees algorithms. Train the Random Forest with `X_train` and `y_train`. Calculate the **precision**, **recall** and **confusion matrix** of the new classifier. Is it better than any of the previous baseline models? Justify your answer.\n",
+        "### [**EX33**] Build a **Bagging** ensemble based on Random Forest. Random Forest is considered a bagging ensemble formed by Decision Trees algorithms. Train the Random Forest with `X_train` and `y_train`. Calculate the **precision**, **recall** and **confusion matrix** of the new classifier. Is it better than any of the previous baseline models? Justify your answer.\n",
         "\n",
         "Tip: You may use [RandomForestClassifier()](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) to build this type of ensemble."
       ]
@@ -3311,7 +3312,7 @@
         "id": "n2DjCnBu7v6a"
       },
       "source": [
-        "**[EX34]** As the dataset has more samples for class \"Y\" than for class \"N\", the training process might be affected by the unbalanced scenario. Random Forest's `class_weight`=\"balanced\" will fix it. Train a new RF model including `class_weight`=\"balanced\". Has the RF's performance improved? Is the unbalanced class affecting the performace?"
+        "### **[EX34]** As the dataset has more samples for class \"Y\" than for class \"N\", the training process might be affected by the unbalanced scenario. Random Forest's `class_weight`=\"balanced\" will fix it. Train a new RF model including `class_weight`=\"balanced\". Has the RF's performance improved? Is the unbalanced class affecting the performace?"
       ]
     },
     {
@@ -3331,7 +3332,7 @@
         "id": "iVmWqBW8lpeS"
       },
       "source": [
-        "[**EX35**] Build a **Boosting** ensemble based on Gradient Tree Boosting (GBT). There are several boosting algorithms as Adaboost, etc.  Train the GBT with `X_train` and `y_train`. Calculate the **precision**, **recall** and **confusion matrix** of the new classifier. Is it better than any of the previous baseline models? Justify your answer.\n",
+        "### [**EX35**] Build a **Boosting** ensemble based on Gradient Tree Boosting (GBT). There are several boosting algorithms as Adaboost, etc.  Train the GBT with `X_train` and `y_train`. Calculate the **precision**, **recall** and **confusion matrix** of the new classifier. Is it better than any of the previous baseline models? Justify your answer.\n",
         "\n",
         "Tip: You may use [GradientBoostingClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingClassifier.html) to build this type of ensemble."
       ]
